--- a/components/annotator/annotator.wxss
+++ b/components/annotator/annotator.wxss
@@ -7,7 +7,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 1em;
+  padding: 1em;
 }
 .annotator > .container > .word {
   display: inline-flex;
