--- a/components/search-box/search-box.wxml
+++ b/components/search-box/search-box.wxml
@@ -1,1 +1,4 @@
-<view class="container" style="height: {{ height }}px;"></view>
+<view
+  class="container {{ atTop ? 'container-top' : '' }}"
+  style="height: {{ height }}px;">
+</view>
