--- a/components/search-box/search-box.wxss
+++ b/components/search-box/search-box.wxss
@@ -1,6 +1,12 @@
 .container {
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-              0 1px 5px 0 rgba(0, 0, 0, 0.12),
-              0 3px 1px -2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 4px rgba(0,0,0,.14),
+              0 4px 8px rgba(0,0,0,.28);
   transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: white;
+  position: fixed;
+  width: 100vw;
+  top: 0;
+}
+.container.container-top {
+  box-shadow: 0 0 1px rgba(0,0,0,.28);
 }
