A: add sortable-list prototype

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,9 +1,9 @@
-<search-box
+<searchBox
   height="{{ navigationBarHeight }}"
   atTop="{{ atTop }}"
 />
 <view style="padding-top: {{ navigationBarHeight }}px" >
-  <!--<annotator parsedText="{{ parsed }}" />-->
+  <!-- <sortableList /> -->
   <card
     wx:for="{{ cards }}"
     wx:forindex="index"
