correct mui color

--- a/miniprogram/components/card/card.wxss
+++ b/miniprogram/components/card/card.wxss
@@ -2,7 +2,7 @@
   margin: 0.8em;
   padding: 1em;
   border-radius: 8px;
-  background-color: #f2f2f2;
+  background-color: rgb(240, 242, 243);
   display: flex;
   flex-direction: column;
 }
