search box handle height

--- a/miniprogram/pages/setting/setting.wxml
+++ b/miniprogram/pages/setting/setting.wxml
@@ -1,4 +1,4 @@
-<searchBox
-  height="{{ navigationBarHeight }}"
-/>
+<searchBox />
+<view style="padding-top: {{ navigationBarHeight }}px" >
+</view>
 <tabBar />
