--- a/miniprogram/pages/text/text.wxml
+++ b/miniprogram/pages/text/text.wxml
@@ -1,6 +1,4 @@
-<searchBox
-  height="{{ navigationBarHeight }}"
-/>
+<searchBox />
 <view style="padding-top: {{ navigationBarHeight }}px" >
   <annotator
     parsedText="{{ parsed }}"
