--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <searchBox />
-<view style="padding-top: {{ navigationBarHeight }}px" >
+<view style="padding-top: {{ navigationBarHeight }}px; padding-bottom: 2em;" >
   <!-- <sortableList /> -->
   <card
     wx:for="{{ data.text }}"
