--- a/miniprogram/pages/setting/setting.wxml
+++ b/miniprogram/pages/setting/setting.wxml
@@ -1,6 +1,6 @@
 <searchBox />
 <view
-  style="padding-top: {{ navigationBarHeight }}px"
+  style="padding-top: {{ navigationBarHeight }}px; padding-bottom: 2em;"
   catchValueChanged="onValueChanged"
 >
   <card>
