--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -2,5 +2,26 @@ card .content {
   font-size: 0.7em;
   margin-top: 0.7em;
   color: #222222;
+}
 
+.float_button {
+  height: 2.5em;
+  width: 2.5em;
+  position: fixed;
+  bottom: 4em;
+  right: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  transition: background-color 0.2s ease;
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+              0 1px 10px 0 rgba(0, 0, 0, 0.12),
+              0 2px 4px -1px rgba(0, 0, 0, 0.4);
+  border-radius: 1.5em;
+}
+
+.float_button > image {
+  width: 1em;
+  height: 1em;
 }
