text title and app title

--- a/miniprogram/components/annotator/annotator.wxml
+++ b/miniprogram/components/annotator/annotator.wxml
@@ -1,5 +1,6 @@
 <view class="annotator {{ vertical ? 'vertical' : '' }}">
   <view class="container">
+    <view class="title">{{ title }}</view>
     <view class="paragraph"
       wx:for="{{ parsed }}"
       wx:for-index="index"
