--- a/miniprogram/components/search-box/search-box.wxml
+++ b/miniprogram/components/search-box/search-box.wxml
@@ -3,7 +3,8 @@
   class="container {{ atTop ? 'container-top' : '' }}"
   style="height: {{ height }}px;">
   <view class="capsule"></view>
-  <view class="search-box">
+  <!-- <view class="search-box">
     <text>搜索还没做</text>
-  </view>
+  </view> -->
+  <view class="title">Kanano</view>
 </view>
