--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -5,8 +5,8 @@ card .content {
 }
 
 .float_button {
-  height: 2.5em;
-  width: 2.5em;
+  height: 3em;
+  width: 3em;
   position: fixed;
   bottom: 4em;
   right: 1em;
@@ -22,6 +22,6 @@ card .content {
 }
 
 .float_button > image {
-  width: 1em;
-  height: 1em;
+  width: 22px;
+  height: 22px;
 }
