--- a/miniprogram/pages/text/text.wxml
+++ b/miniprogram/pages/text/text.wxml
@@ -1,7 +1,8 @@
-<!-- <searchBox /> -->
+<searchBox />
 <view style="padding-top: {{ navigationBarHeight }}px; padding-bottom: 2em;" >
   <annotator
     parsedText="{{ parsed }}"
+    title="{{ title }}"
   />
 </view>
 <tabBar />
