--- a/miniprogram/pages/text/text.wxml
+++ b/miniprogram/pages/text/text.wxml
@@ -3,6 +3,7 @@
   <annotator
     parsedText="{{ parsed }}"
     title="{{ title }}"
+    bindTitleChange="onTitleChanged"
   />
 </view>
 <tabBar />
