index page long press to delete

--- a/miniprogram/components/annotator/annotator.wxml
+++ b/miniprogram/components/annotator/annotator.wxml
@@ -25,8 +25,7 @@
 </view>
 <popup
   active="{{ wordDetailActive }}"
-  left="{{ wordDetailLeft }}"
-  top="{{ wordDetailTop }}"
+  top="200rpx"
 >
   <view class="detail_table">
     <view
