--- a/miniprogram/components/popup/popup.wxml
+++ b/miniprogram/components/popup/popup.wxml
@@ -5,6 +5,7 @@
 <view
   class="container {{ active ? 'active' : '' }}"
   catchtouchmove="noop"
+  style="top: {{ top }};"
 >
   <slot></slot>
 </view>
