--- a/miniprogram/components/popup/popup.wxss
+++ b/miniprogram/components/popup/popup.wxss
@@ -7,12 +7,11 @@
   opacity: 0;
   transition: opacity 0.2s ease;
   background-color: black;
-  z-index: -1;
+  z-index: 2;
   pointer-events: none;
 }
 
 .mask.active {
-  z-index: 2;
   opacity: 0.2;
   pointer-events: all;
 }
@@ -20,9 +19,8 @@
 .container {
   transition: opacity 0.2s ease;
   opacity: 0;
-  position: absolute;
-  z-index: -1;
-  top: 200rpx;
+  position: fixed;
+  z-index: 3;
   left: 0;
   width: 100vw;
   pointer-events: none;
@@ -31,6 +29,5 @@
 
 .container.active {
   opacity: 1;
-  z-index: 3;
   pointer-events: all;
 }
