--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -25,3 +25,14 @@ card .content {
   width: 22px;
   height: 22px;
 }
+
+.popup_menu {
+  background-color: white;
+  box-sizing: border-box;
+  padding: 0.5em 1em;
+  box-shadow: 0 0 4px rgba(0,0,0,.14),
+              0 4px 8px rgba(0,0,0,.28);
+  border: 1rpx solid #eeeeee;
+  width: 500rpx;
+  display: inline-block;
+}
