--- a/miniprogram/components/input-modal/input-modal.wxss
+++ b/miniprogram/components/input-modal/input-modal.wxss
@@ -13,6 +13,7 @@
 
 .mask.active {
   opacity: 0.2;
+  z-index: 3;
   pointer-events: all;
 }
 
@@ -32,6 +33,7 @@
 }
 
 .container.active {
+  z-index: 4;
   opacity: 1;
   pointer-events: all;
 }
