--- a/miniprogram/components/popup/popup.wxss
+++ b/miniprogram/components/popup/popup.wxss
@@ -12,6 +12,7 @@
 }
 
 .mask.active {
+  z-index: 3;
   opacity: 0.2;
   pointer-events: all;
 }
@@ -28,6 +29,7 @@
 }
 
 .container.active {
+  z-index: 4;
   opacity: 1;
   pointer-events: all;
 }
